[gd_scene load_steps=2 format=2]

[ext_resource path="res://ui/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -91.0
margin_top = -170.0
margin_right = 91.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="Panel/VBoxContainer"]
margin_right = 182.0
margin_bottom = 82.0
size_flags_horizontal = 3
size_flags_vertical = 7
text = "Main Menu"
align = 1
uppercase = true

[node name="StartBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 86.0
margin_right = 182.0
margin_bottom = 168.0
focus_neighbour_top = NodePath("../QuitBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start"
flat = true

[node name="OptionsBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 172.0
margin_right = 182.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"
flat = true

[node name="QuitBtn" type="Button" parent="Panel/VBoxContainer"]
margin_top = 258.0
margin_right = 182.0
margin_bottom = 340.0
focus_neighbour_bottom = NodePath("../StartBtn")
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Quit"
flat = true

[connection signal="pressed" from="Panel/VBoxContainer/StartBtn" to="." method="_on_StartBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/OptionsBtn" to="." method="_on_OptionsBtn_pressed"]
[connection signal="pressed" from="Panel/VBoxContainer/QuitBtn" to="." method="_on_QuitBtn_pressed"]
